feat: added flattening helper functions + k8s healthchecks (#4)
* feat: added flattening helper functions + k8s healthchecks

* docs: updated readme + fixed some comments

* refactor: changed locations of helper functions

* test: added test suite for flatten functions

* refactor: changed 'permission' field correction strategy

* test: add first tests for repo endpoint

* test: added batch of unit tests for repo + test refactor

* fix: fixed readme

* test: added batch of unit test for teamRepo

* feat: added response body for /swagger docs endpoints

* docs: updated readme

* docs: updated readme
